RESOLVED FIXED107464
[Blackberry] Static code analysis warning fixes
https://bugs.webkit.org/show_bug.cgi?id=107464
Summary [Blackberry] Static code analysis warning fixes
sfa
Reported 2013-01-21 11:20:58 PST
Klocwork issues: 1367,2367,4321,4322
Attachments
patch (3.09 KB, patch)
2013-01-21 11:42 PST, sfa
no flags
sfa
Comment 1 2013-01-21 11:42:11 PST
Created attachment 183811 [details] patch Klocwork issues: 1367, 2367 Dropped 4321+4322 since they applied to source code that hasn't been upstreamed yet.
Rob Buis
Comment 2 2013-01-22 14:19:31 PST
Comment on attachment 183811 [details] patch LGTM.
WebKit Review Bot
Comment 3 2013-01-22 14:23:44 PST
Comment on attachment 183811 [details] patch Clearing flags on attachment: 183811 Committed r140470: <http://trac.webkit.org/changeset/140470>
WebKit Review Bot
Comment 4 2013-01-22 14:23:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.