[Blackberry] Static code analysis warning fixes https://bugs.webkit.org/show_bug.cgi?id=107464

Patch by Anthony Scian <ascian@rim.com> on 2013-01-22
Reviewed by Rob Buis.

Klocwork issues: 1367, 2367
- add NULL pointer checks detected by static code analysis

* platform/blackberry/WidgetBlackBerry.cpp:
(WebCore::Widget::setCursor):
* plugins/blackberry/PluginViewBlackBerry.cpp:
(WebCore::PluginView::updatePluginWidget):

Canonical link: https://commits.webkit.org/125815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140470 268f45cc-cd09-0410-ab3c-d52691b4dbfc