Source/WebCore/plugins/blackberry/PluginViewBlackBerry.cpp
@@ -108,8 +108,11 @@ void PluginView::updatePluginWidget()
 
     m_windowRect = IntRect(frameView->contentsToWindow(frameRect().location()), frameRect().size());
 
+    ScrollView* theRoot = root();
+    if (!theRoot)
+        return; // ASSERT(parent()->isFrameView()) should prevent this but check just in case
     // Map rect to content coordinate space of main frame.
-    m_windowRect.move(root()->scrollOffset());
+    m_windowRect.move(theRoot->scrollOffset());
 
     m_clipRect = calculateClipRect();
 
